--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
 version: '3'
 
 services:
+
   wp:
     image: wordpress:latest # https://hub.docker.com/_/wordpress/
+    restart: always
     ports:
-      - 80:80 # change ip if required
+      - 81:80 # change ip if required
     volumes:
       - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
       - ./wp-app:/var/www/html # Full wordpress project
       #- ./plugin-name/trunk/:/var/www/html/wp-content/plugins/plugin-name # Plugin development
       #- ./theme-name/trunk/:/var/www/html/wp-content/themes/theme-name # Theme development
+    depends_on:
+      - db
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_NAME: "${DB_NAME}"
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
-    depends_on:
-      - db
+    Links:
+     - db
+
 
   wpcli:
     image: wordpress:cli
@@ -27,8 +32,9 @@ services:
       - db
       - wp
 
-  db:
+  mysql:
     image: mysql:latest # https://hub.docker.com/_/mysql/ - or mariadb https://hub.docker.com/_/mariadb
+    restart: always
     ports:
       - ${IP}:3306:3306 # change ip if required
     command: [
